# citest

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  azure-pipelines.yml  buildspec.yml  citest.py  modestack.py  pyproject.toml  test_modestack.py
.github/workflows/: auto-merge.yml  ci.yml  pre-commit.yml
tests/: test_citest.py
