[tool.poetry]
name = "citest"
version = "0.1.0"
description = ""
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mypy = "^0.782"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
