[tool.poetry]
name = "citest"
version = "0.1.0"
description = ""
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mypy = "^0.782"
flake8 = "^3.7.9"
black = "^20.8b0"
pyupgrade = "^2.7.2"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
