[tool.poetry]
name = "citest"
version = "0.1.0"
description = ""
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.960"
flake8 = "^4.0.1"
black = "^20.8b0"
pyupgrade = "^2.7.2"
pre-commit = "^2.7.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
